<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sample Export DB as .CSV and .PDF</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address"> Address</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="save">Save</string>
    <string name="export">Export as CSV</string>
    <string name="exportpdf">Export as PDF</string>
    <string name="infodialog">Export a SQLITE DB as .CSV and .PDF Example is done by using the 
        OpenCSV-2.3.jar and iTextpdf-5.2.1 libraries.  </string>
        <string name="title1"> You can download through JAR from following links</string>
    <string name="dialog1">OPENCSV-2.3.jar</string>
    <string name="dialog1_link"><u><a href="http://www.java2s.com/Code/Jar/o/Downloadopencsv23jar.htm">http://www.java2s.com/Code/Jar/o/Downloadopencsv23jar.htm </a></u></string>
    <string name="dialog2">iTextPDF-5.2.1.jar</string>
    <string name="dialog2_link"><u><a href="http://mvnrepository.com/artifact/com.itextpdf/itextpdf/5.2.1">http://mvnrepository.com/artifact/com.itextpdf/itextpdf/5.2.1</a></u></string>
    <string name="dialog3">You can also download the code from GITHUB.</string>
    <string name="dialog3_link"><u><a href="http://github.com/vignarajj">http://github.com/vignarajj</a></u></string>
    <string name="ok">Close</string>

</resources>