<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF" >
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/infodialog"
        android:layout_margin="2dp"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/title1"
        android:layout_margin="2dp"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/dialog1"
        android:layout_margin="2dp"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#80BFFF"
        android:text="@string/dialog1_link"
        android:layout_margin="2dp"
        android:id="@+id/link1"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/dialog2"
        android:layout_margin="2dp"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#80BFFF"
        android:text="@string/dialog2_link"
        android:layout_margin="2dp"
        android:id="@+id/link2"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/dialog3"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp"
         >
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/github"
        android:contentDescription="@string/app_name"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#80BFFF"
        android:text="@string/dialog3_link"
        android:id="@+id/link3"
        android:layout_gravity="center_vertical"
        />
    </LinearLayout>
    <Button 
        android:id="@+id/ok"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"
        android:layout_margin="2dp"
        />
</LinearLayout>